Use virtual threads in ScalabilityBenchmark to match main codebase
ScalabilityBenchmark now uses virtual threads with semaphore-based
concurrency control, matching the pattern in VirtualThreadExecutor.

- Replace Executors.newFixedThreadPool() with newVirtualThreadPerTaskExecutor()
- Add Semaphore to control max concurrent tasks (was threadCount, now maxConcurrency)
- Each file processed by its own virtual thread, semaphore limits parallelism

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>